Enable projectile cache

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,6 @@ agent/*
 /.smex-items
 /alanz.el.1
 /saved-places
+/projectile-bookmarks.eld
+/projectile.cache
+/session.10702d9a76e26212dd139411288697645800000021580041
