moving to subdirectory to avoid emacs warning

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,14 @@ agent/*
 /starter-kit-org.el
 /starter-kit-registers.el
 /starter-kit.el
+/custom.el.before_ecb_2.40
+/custom.el.before_ecb_2.40__1
+/custom.el.before_ecb_2.40__2
+/starter-kit/alanz.el
+/starter-kit/elpa/
+/starter-kit/starter-kit-bindings.el
+/starter-kit/starter-kit-defuns.el
+/starter-kit/starter-kit-misc.el
+/starter-kit/starter-kit-org.el
+/starter-kit/starter-kit-registers.el
+/starter-kit/starter-kit.el
