--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@ agent/*
 /starter-kit/starter-kit-org.el
 /starter-kit/starter-kit-registers.el
 /starter-kit/starter-kit.el
+/starter-kit/backups/
